<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:autoPlay="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="152dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_player"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:textColor="@color/primary_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster"
        tools:text="Title" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="19 June 2020" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:textColor="@color/accent_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date"
        tools:text="10.0" />

    <TextView
        android:id="@+id/tv_popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_rating"
        tools:text="Popularity: 10.000" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_genre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing_xs"
        app:layout_constraintBottom_toTopOf="@id/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_popularity" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/label_overview"
        android:textColor="@color/primary_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_poster" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing_xxs"
        android:textColor="@color/primary_100"
        app:layout_constraintTop_toBottomOf="@id/overview"
        tools:text="overview" />

    <TextView
        android:id="@+id/actor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/label_actor"
        android:textColor="@color/primary_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_overview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_credit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing_xs"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actor" />

    <TextView
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/label_review"
        android:textColor="@color/primary_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/rv_credit" />

    <ViewAnimator
        android:id="@+id/va_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_marginTop="@dimen/spacing_xs"
            android:clipToPadding="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/label_no_content"
            android:textAlignment="center"
            android:textColor="@color/primary_100" />

    </ViewAnimator>

    <TextView
        android:id="@+id/similar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/label_similar_movie"
        android:textColor="@color/primary_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/va_review" />

    <ViewAnimator
        android:id="@+id/va_similar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/similar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:clipToPadding="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/label_no_content"
            android:textAlignment="center"
            android:textColor="@color/primary_100" />

    </ViewAnimator>

</androidx.constraintlayout.widget.ConstraintLayout>